--- a/GitTest01/src/main/webapp/assets/html/base.html
+++ b/GitTest01/src/main/webapp/assets/html/base.html
@@ -34,10 +34,11 @@
                         <a href="#">주변위치</a>
                     </div>
                 </li>
-                <li class="dropdown">
+                <li class="dropdown health-tab"> <!-- 여기서 클래스 추가 -->
                     <a href="#">맞춤형 정보</a>
-                    <div class="dropdown-content1">
+                    <div class="dropdown-content">
                         <a href="#" class="moveable">건강관리</a>
+                        <a href="#" class="moveable">질병예측</a>
                     </div>
                 </li>
                 <li class="dropdown">
@@ -64,33 +65,7 @@
     <!-- Wrapper: 메인 콘텐츠 및 푸터를 중앙에 배치 -->
     <div class="wrapper">
         <main>
-            <section class="content">
-                <!-- 제품 상세 콘텐츠 예시 -->
-                <div class="product-detail">
-                    <h1>제품 이름</h1>
-                    <img src="product-image.png" alt="제품 이미지">
-                    <p>제품 설명 및 상세 정보</p>
-                    <button>구매하기</button>
-                </div>
-            </section>
-            <section class="content">
-                <!-- 제품 상세 콘텐츠 예시 -->
-                <div class="product-detail">
-                    <h1>제품 이름</h1>
-                    <img src="product-image.png" alt="제품 이미지">
-                    <p>제품 설명 및 상세 정보</p>
-                    <button>구매하기</button>
-                </div>
-            </section>
-            <section class="content">
-                <!-- 제품 상세 콘텐츠 예시 -->
-                <div class="product-detail">
-                    <h1>제품 이름</h1>
-                    <img src="product-image.png" alt="제품 이미지">
-                    <p>제품 설명 및 상세 정보</p>
-                    <button>구매하기</button>
-                </div>
-            </section>
+            
     </div>
     
             <!-- 배너: 전체 너비로 설정 -->
@@ -134,13 +109,13 @@
                     <h3>맞춤형 정보</h3>
                     <ul>
                         <li><a href="#">건강관리</a></li>
-                        <li><a href="#">자주 묻는 질문</a></li>
+                        <li><a href="#">질병예측</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h3>커뮤니티</h3>
                     <ul>
-                        <li><a href="#">앨범 게시판</a></li>
+                        <li><a href="#">자주 묻는 질문</a></li>
                         <li><a href="#">자유 게시판</a></li>
                     </ul>   
                 </div>
