--- a/GitTest01/src/main/webapp/assets/html/buy.html
+++ b/GitTest01/src/main/webapp/assets/html/buy.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>제품 상세 페이지</title>
+    <title>구매 정보</title>
     <link rel="stylesheet" href="../css/Base_style.css">
+    <link rel="stylesheet" href="../css/buy.css">
 </head>
 <body>
     <header>
@@ -44,7 +45,7 @@
                 <li class="dropdown community-tab">
                     <a>커뮤니티</a>
                     <div class="dropdown-content community-content">
-                        <a href="#">앨범게시판</a>
+                        <a href="#">자유게시판</a>
                     </div>
                 </li>
             </ul>
@@ -56,8 +57,8 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="main.html">홈</a><span>&gt;</span></li>
-                <!-- <li class="breadcrumb-item"><a href="item_list.html">제품</a><span>&gt;</span></li>
-                <li class="breadcrumb-item active" aria-current="page">사료</li> -->
+                 <li class="breadcrumb-item"><a href="item_list.html">제품</a><span>&gt;</span></li> 
+                <li class="breadcrumb-item active" aria-current="page">구매</li> 
             </ol>
         </nav>
         <div class="user-options">
@@ -66,24 +67,56 @@
         </div>
     </header>
 
-    <!-- Wrapper: 메인 콘텐츠 및 푸터를 중앙에 배치 -->
     <div class="wrapper">
         <main>
+            <div class="purchase-info">
+                <div class="product-summary">
+                    <div class="product-image">
+                        <img src="../img/Be_list01.png" alt="제품 이미지">
+                    </div>
+                    <div class="product-details">
+                        <p>씨투엠에듀 도형학습의 기준 플라토 유치~초등 단계별 선택구매(전4권)</p>
+                        <p>선택 | 02. 플라토 P1~P4 (전4권)(개정판)</p>
+                        <p class="price">26,120원 / 1개</p>
+                        <p class="shipping">배송비: 무료배송</p>
+                    </div>
+                </div>
+                <div class="price-summary">
+                    <p class="total-price">총 결제금액: 26,120원</p>
+                </div>
+            </div>
+
+            <div class="shipping-info">
+                <h2>배송지정보</h2>
+                <form class="purchase-form" action="your_backend_url" method="post">
+                    <div class="form-group">
+                        <label for="name">이름</label>
+                        <input type="text" id="name" name="name" placeholder="이름을 입력해 주세요.">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">연락처</label>
+                        <input type="tel" id="phone" name="phone" placeholder="010-0000-0000">
+                    </div>
+                    <div class="form-group">
+                        <label for="address">주소</label>
+                        <input type="text" id="address" name="address" placeholder="주소를 입력해 주세요.">
+                    </div>
+                    <div class="form-group">
+                        <label for="request">요청사항</label>
+                        <input type="text" id="request" name="request" placeholder="배송시 요청사항을 선택해 주세요.">
+                    </div>
+                    <button type="submit" name="action" value="submit">결제하기</button>
+                </form>
+            </div>
             
-
-
-
         </main>
     </div>
-    <!-- 배너: 전체 너비로 설정 -->
-    <section class="banner">
-        <img src="../img/Base_banner.png" alt="Be Petmily Banner">
-    </section>
+
     <footer class="footer-wrapper">
         <div class="footer-container">
             <div class="footer-top-bar">
                 <span class="footer-lang">🌐 대한민국/한국어 </span>
-                <span class="footer-top"><a href="#" id="back-to-top1"><img src="../img/Base_up01.png" alt="맨 위" srcset=""></a></span>
+                <span class="footer-top"><a href="#" id="back-to-top1"><img src="../img/Base_up01.png" alt="맨 위로"></a></span>
             </div>
             <hr> 
             <div class="footer-top">
@@ -114,7 +147,7 @@
                 <div class="footer-links">
                     <h3>커뮤니티</h3>
                     <ul>
-                        <!-- <li><a href="#">자주 묻는 질문</a></li> -->
+                        <!-- <li><a href="#">앨범게시판</a></li> -->
                         <li><a href="#">자유게시판</a></li>
                     </ul>   
                 </div>
@@ -135,29 +168,5 @@
             </div>
         </div>
     </footer>
-
-    <script>
-        function changeQuantity(amount) {
-            var quantityInput = document.getElementById('quantity');
-            var currentQuantity = parseInt(quantityInput.value);
-            var newQuantity = currentQuantity + amount;
-            if (newQuantity < 1) {
-                newQuantity = 1;
-            }
-            quantityInput.value = newQuantity;
-            updateTotalPrice();
-        }
-
-        function updateTotalPrice() {
-            var quantity = document.getElementById('quantity').value;
-            var price = 39200;
-            var totalPrice = price * quantity;
-            document.getElementById('total-price').innerText = totalPrice.toLocaleString() + '원';
-        }
-
-        document.getElementById('back-to-top').addEventListener('click', function(e) {
-            e.preventDefault();
-            window.scrollTo({top: 0, behavior: 'smooth'});
-        });
-    </script>
 </body>
+</html>
