--- a/GitTest01/src/main/webapp/assets/html/item_item.html
+++ b/GitTest01/src/main/webapp/assets/html/item_item.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제품 상세 페이지</title>
+    <link rel="stylesheet" href="../css/Base_style.css">
     <link rel="stylesheet" href="../css/item_item.css">
 </head>
 <body>
@@ -11,46 +12,48 @@
         <div class="logo">
             <a href="main.html"><img src="../img/Base_logo.png" alt="Be Petmily Logo"></a>
         </div>
-        <hr>
-        <nav>
+        
+        <!-- 주 네비게이션 -->
+        <nav class="main-nav">
             <ul>
-                <li class="dropdown">
+                <!-- 개별 드롭다운 메뉴 설정 -->
+                <li class="dropdown products-tab">
                     <a>제품</a>
-                    <div class="dropdown-content">
+                    <div class="dropdown-content products-content">
                         <a href="item_list.html">사료</a>
                         <a href="#">간식</a>
                         <a href="#">용품</a>
-                        <a href="#">장난감</a>
-                        <a href="#">위생용품</a>    
-                        <a href="#">산책용품</a>
                     </div>
                 </li>
-                <li class="dropdown">
-                    <a >시설</a>
-                    <div class="dropdown-content">
+                <li class="dropdown facilities-tab">
+                    <a>시설</a>
+                    <div class="dropdown-content facilities-content">
                         <a href="#">병원</a>
                         <a href="#">숙박</a>
-                        <a href="#">카페</a>
+                        <a href="#">카페/식당</a>
+                        <a href="#">기타시설</a>
                         <a href="kaomap2 ok.html">주변위치</a>
                     </div>
                 </li>
-                <li class="dropdown health-tab"> <!-- 여기서 클래스 추가 -->
+                <li class="dropdown health-tab">
                     <a>맞춤형 정보</a>
-                    <div class="dropdown-content">
+                    <div class="dropdown-content health-content">
                         <a href="HealthCare.html" class="moveable">건강관리</a>
                         <a href="#" class="moveable">질병예측</a>
                     </div>
                 </li>
-                <li class="dropdown">
-                    <a >커뮤니티</a>
-                    <div class="dropdown-content">
-                        <!-- <a href="#">자주묻는 질문</a> -->
-                        <a href="#">앨범게시판</a>
+                <li class="dropdown community-tab">
+                    <a>커뮤니티</a>
+                    <div class="dropdown-content community-content">
+                        <a href="#">자유게시판</a>
                     </div>
                 </li>
             </ul>
-        </nav> 
+        </nav>
+        <hr>
         <!-- 브레드크럼 네비게이션 -->
+        <div class="nav-background"></div>
+        <div class="breadcrumb-background"></div> <!-- 사각형 도형을 추가 -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="main.html">홈</a><span>&gt;</span></li>
@@ -72,11 +75,47 @@
                     <div class="product-image">
                         <img src="../img/Be_list01.png" alt="제품 이미지">
                     </div>
-                    <div class="product-info">
-                        <h1>로얄캐닌 푸들 3kg 피모관리</h1>
-                        <p class="price">39,200원</p>
-                        <p>최저가 보장</p>
-                        <button>구매하기</button>
+                    <div class="container">
+                        <div class="product-grid">
+                            <!-- 제품 상세 콘텐츠 예시 -->
+                            <div class="product-detail">
+                                <!-- <img src="/09.project1/project1-1/image/1.png" alt="제품 이미지"> -->
+                                <h1>로얄캐닌 푸들 3kg 피모관리</h1>
+                                <p class="price"><span id="product-price">39,200원</span></p>
+                                <hr>
+                                <p>🪴본 상품은 비 펫밀리에서 100% 정품임을 보증합니다.</p>
+                                <p>안심하시고 급여하세요!</p>
+                                <p>자세히 보기</p>
+                                <hr>
+                                <p style="color: #e69620;">🚚펫밀리배송</p>
+                                <div class="free-shipping">
+                                    <h1>무료배송</h1>
+                                    <span>(30,000원 이상 구매 시)</span>
+                                </div>
+                                <p>오늘 주문 시 7월 15일(월) 출발</p>
+                                <div class="rating">
+                                    <span>⭐⭐⭐⭐⭐</span> 
+                                    <!-- <span class="reviews">(2068 리뷰)</span> -->
+                                </div>
+                                <div class="quantity-container">
+                                    <img src="../img/item_down.png" alt="감소" 
+                                    onclick="changeQuantity(-1)" style="cursor: pointer; width: 30px; height: 30px;">
+                                    <input type="number" id="quantity" name="quantity" value="1" min="1" readonly>
+                                    <img src="../img/item_up.png" alt="증가" 
+                                    onclick="changeQuantity(1)" style="cursor: pointer; width: 30px; height: 30px;">
+                                </div>
+                                <div class="total-price">
+                                    <p><span id="total-price">주문 금액 39,200원</span></p>
+                                </div>
+                                <hr>
+                                <form action="purchase" method="post">
+                                    <input type="hidden" name="product" value="로얄캐닌 푸들 3kg 피모관리">
+                                    <input type="hidden" name="price" value="39200">
+                                    <input type="hidden" name="quantity" id="form-quantity" value="1">
+                                    <button type="submit">구매하기</button>
+                                </form>                           
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="product-description">
@@ -88,22 +127,17 @@
                     <p>이용 안내 정보가 여기에 들어갑니다.</p>
                 </div>
             </section>
-
-
-        
-    </div>
-        <!-- 배너: 전체 너비로 설정 -->
-        <section class="banner">
-            <img src="/09.project1/project1-1/image/f.banner.png" alt="Be Petmily Banner">
-        </section>
-
         </main>
-
+    </div>
+    <!-- 배너: 전체 너비로 설정 -->
+    <section class="banner">
+        <img src="../img/Base_banner.png" alt="Be Petmily Banner">
+    </section>
     <footer class="footer-wrapper">
         <div class="footer-container">
             <div class="footer-top-bar">
                 <span class="footer-lang">🌐 대한민국/한국어 </span>
-                <span class="footer-top"><a href="#" id="back-to-top1"><img src="/09.project1/project1-1/image/맨 위 (2).png" alt="맨 위" srcset=""></a></span>
+                <span class="footer-top"><a href="#" id="back-to-top1"><img src="../img/Base_up01.png" alt="맨 위" srcset=""></a></span>
             </div>
             <hr> 
             <div class="footer-top">
@@ -113,7 +147,6 @@
                         <li><a href="item_list.html">사료</a></li>
                         <li><a href="#">간식</a></li>
                         <li><a href="#">용품</a></li>
-
                     </ul>
                 </div>
                 <div class="footer-links">
@@ -136,7 +169,7 @@
                     <h3>커뮤니티</h3>
                     <ul>
                         <!-- <li><a href="#">자주 묻는 질문</a></li> -->
-                        <li><a href="#">자유 게시판</a></li>
+                        <li><a href="#">자유게시판</a></li>
                     </ul>   
                 </div>
             </div>
@@ -152,12 +185,31 @@
                 <p>©2017 Be Petmily. All rights reserved. An Affiliate of Mars, Incorporated.</p>
             </div>
             <div class="back-to-top">
-                <a href="#" id="back-to-top"><img src="/09.project1/project1-1/image/up1.png" alt="맨 위로"></a>
+                <a href="#" id="back-to-top"><img src="../img/Base_up02.png" alt="맨 위로"></a>
             </div>
         </div>
     </footer>
 
     <script>
+        function changeQuantity(amount) {
+            var quantityInput = document.getElementById('quantity');
+            var currentQuantity = parseInt(quantityInput.value);
+            var newQuantity = currentQuantity + amount;
+            if (newQuantity < 1) {
+                newQuantity = 1;
+            }
+            quantityInput.value = newQuantity;
+            document.getElementById('form-quantity').value = newQuantity; // Update hidden form input
+            updateTotalPrice();
+        }
+
+        function updateTotalPrice() {
+            var quantity = document.getElementById('quantity').value;
+            var price = 39200;
+            var totalPrice = price * quantity;
+            document.getElementById('total-price').innerText = '주문 금액 ' + totalPrice.toLocaleString() + '원';
+        }
+
         document.getElementById('back-to-top').addEventListener('click', function(e) {
             e.preventDefault();
             window.scrollTo({top: 0, behavior: 'smooth'});
