--- a/GitTest01/src/main/webapp/assets/html/buy.html
+++ b/GitTest01/src/main/webapp/assets/html/buy.html
@@ -32,20 +32,20 @@
                         <a href="#">숙박</a>
                         <a href="#">카페/식당</a>
                         <a href="#">기타시설</a>
-                        <a href="kaomap2 ok.html">주변위치</a>
+                        <a href="map.html">주변위치</a>
                     </div>
                 </li>
                 <li class="dropdown health-tab">
                     <a>맞춤형 정보</a>
                     <div class="dropdown-content health-content">
-                        <a href="HealthCare.html" class="moveable">건강관리</a>
+                        <!-- <a href="HealthCare.html" class="moveable">건강관리</a> -->
                         <a href="#" class="moveable">질병예측</a>
                     </div>
                 </li>
                 <li class="dropdown community-tab">
                     <a>커뮤니티</a>
                     <div class="dropdown-content community-content">
-                        <a href="#">자유게시판</a>
+                        <a href="#">앨범게시판</a>
                     </div>
                 </li>
             </ul>
@@ -134,13 +134,13 @@
                         <li><a href="#">병원</a></li>
                         <li><a href="#">숙박</a></li>
                         <li><a href="#">카페</a></li>
-                        <li><a href="kaomap2 ok.html">주변위치</a></li>
+                        <li><a href="map.html">주변위치</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h3>맞춤형 정보</h3>
                     <ul>
-                        <li><a href="HealthCare.html">건강관리</a></li>
+                        <!-- <li><a href="HealthCare.html">건강관리</a></li> -->
                         <li><a href="#">질병예측</a></li>
                     </ul>
                 </div>
@@ -148,7 +148,7 @@
                     <h3>커뮤니티</h3>
                     <ul>
                         <!-- <li><a href="#">앨범게시판</a></li> -->
-                        <li><a href="#">자유게시판</a></li>
+                        <li><a href="#">앨범게시판</a></li>
                     </ul>   
                 </div>
             </div>
