--- a/GitTest01/src/main/webapp/assets/html/DiseasePrediction.html
+++ b/GitTest01/src/main/webapp/assets/html/DiseasePrediction.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>제품 상세 페이지</title>
+    <title>건강관리</title>
     <link rel="stylesheet" href="../css/Base_style.css">
-    <link rel="stylesheet" href="../css/item_item.css">
+    <link rel="stylesheet" href="../css/HealthCare.css">
 </head>
 <body>
     <header>
@@ -57,8 +57,8 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="main.html">홈</a><span>&gt;</span></li>
-                <li class="breadcrumb-item"><a href="item_list.html">제품</a><span>&gt;</span></li>
-                <li class="breadcrumb-item active" aria-current="page">사료</li>
+                 <!-- <li class="breadcrumb-item"><a href="item_list.html">제품</a><span>&gt;</span></li> -->
+                <li class="breadcrumb-item active" aria-current="page">질병예측</li> 
             </ol>
         </nav>
         <div class="user-options">
@@ -70,63 +70,35 @@
     <!-- Wrapper: 메인 콘텐츠 및 푸터를 중앙에 배치 -->
     <div class="wrapper">
         <main>
-            <section class="product-detail-section">
-                <div class="product-detail-container">
-                    <div class="product-image">
-                        <img src="../img/Be_list01.png" alt="제품 이미지">
+            <section class="custom-info">
+                <div class="info-container">
+                    <div class="info-box small">
+                        <div class="info-image"></div>
+                        <div class="info-text">제품 정보</div>
                     </div>
-                    <div class="container">
-                        <div class="product-grid">
-                            <!-- 제품 상세 콘텐츠 예시 -->
-                            <div class="product-detail">
-                                <!-- <img src="/09.project1/project1-1/image/1.png" alt="제품 이미지"> -->
-                                <h1>로얄캐닌 푸들 3kg 피모관리</h1>
-                                <p class="price"><span id="product-price">39,200원</span></p>
-                                <hr>
-                                <p>🪴본 상품은 비 펫밀리에서 100% 정품임을 보증합니다.</p>
-                                <p>안심하시고 급여하세요!</p>
-                                <p>자세히 보기</p>
-                                <hr>
-                                <p style="color: #e69620;">🚚펫밀리배송</p>
-                                <div class="free-shipping">
-                                    <h1>무료배송</h1>
-                                    <span>(30,000원 이상 구매 시)</span>
-                                </div>
-                                <p>오늘 주문 시 7월 15일(월) 출발</p>
-                                <div class="rating">
-                                    <span>⭐⭐⭐⭐⭐</span> 
-                                    <!-- <span class="reviews">(2068 리뷰)</span> -->
-                                </div>
-                                <div class="quantity-container">
-                                    <img src="../img/item_down.png" alt="감소" 
-                                    onclick="changeQuantity(-1)" style="cursor: pointer; width: 30px; height: 30px;">
-                                    <input type="number" id="quantity" name="quantity" value="1" min="1" readonly>
-                                    <img src="../img/item_up.png" alt="증가" 
-                                    onclick="changeQuantity(1)" style="cursor: pointer; width: 30px; height: 30px;">
-                                </div>
-                                <div class="total-price">
-                                    <p><span id="total-price">주문 금액 39,200원</span></p>
-                                </div>
-                                <hr>
-                                <form action="purchase" method="post">
-                                    <input type="hidden" name="product" value="로얄캐닌 푸들 3kg 피모관리">
-                                    <input type="hidden" name="price" value="39200">
-                                    <input type="hidden" name="quantity" id="form-quantity" value="1">
-                                    <button type="submit">구매하기</button>
-                                </form>                           
-                            </div>
-                        </div>
+                    <div class="info-box large">
+                        <div class="info-image"></div>
+                        <div class="info-text">제품 정보</div>
                     </div>
-                </div>
-                <div class="product-description">
-                    <h2>상품설명</h2>
-                    <p>제품 설명 및 상세 정보가 여기에 들어갑니다.</p>
-                </div>
-                <div class="additional-info">
-                    <h2>이용안내</h2>
-                    <p>이용 안내 정보가 여기에 들어갑니다.</p>
+                    <div class="info-box small">
+                        <div class="info-image"></div>
+                        <div class="info-text">제품 정보</div>
+                    </div>
+                    <div class="info-box small">
+                        <div class="info-image"></div>
+                        <div class="info-text">제품 정보</div>
+                    </div>
+                    <div class="info-box small">
+                        <div class="info-image"></div>
+                        <div class="info-text">제품 정보</div>
+                    </div>
                 </div>
             </section>
+    
+            <!-- 배너: 전체 너비로 설정 -->
+            <!-- <section class="banner">
+                <img src="../img/Base_banner.png" alt="Be Petmily Banner">
+            </section> -->
         </main>
     </div>
     <!-- 배너: 전체 너비로 설정 -->
@@ -154,8 +126,7 @@
                     <ul>
                         <li><a href="#">병원</a></li>
                         <li><a href="#">숙박</a></li>
-                        <li><a href="#">카페/식당</a></li>
-                        <li><a href="#">기타시설</a></li>
+                        <li><a href="#">카페</a></li>
                         <li><a href="map.html">주변위치</a></li>
                     </ul>
                 </div>
@@ -200,7 +171,6 @@
                 newQuantity = 1;
             }
             quantityInput.value = newQuantity;
-            document.getElementById('form-quantity').value = newQuantity; // Update hidden form input
             updateTotalPrice();
         }
 
@@ -208,7 +178,7 @@
             var quantity = document.getElementById('quantity').value;
             var price = 39200;
             var totalPrice = price * quantity;
-            document.getElementById('total-price').innerText = '주문 금액 ' + totalPrice.toLocaleString() + '원';
+            document.getElementById('total-price').innerText = totalPrice.toLocaleString() + '원';
         }
 
         document.getElementById('back-to-top').addEventListener('click', function(e) {
@@ -217,4 +187,3 @@
         });
     </script>
 </body>
-</html>
