--- a/GitTest01/src/main/webapp/assets/html/Mypage.html
+++ b/GitTest01/src/main/webapp/assets/html/Mypage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제품 상세 페이지</title>
     <link rel="stylesheet" href="../css/Base_style.css">
-    <link rel="stylesheet" href="/css/Mypage copy.css">
+    <link rel="stylesheet" href="../css/Mypage.css">
 </head>
 <body>
     <header>
