--- a/GitTest01/src/main/webapp/assets/html/map.html
+++ b/GitTest01/src/main/webapp/assets/html/map.html
@@ -22,7 +22,7 @@
                 <li class="dropdown products-tab">
                     <a>제품</a>
                     <div class="dropdown-content products-content">
-                        <a href="item_list.html">사료</a>
+                        <a href="../html/item_list.html">사료</a>
                         <a href="#">간식</a>
                         <a href="#">용품</a>
                     </div>
@@ -34,20 +34,20 @@
                         <a href="#">숙박</a>
                         <a href="#">카페/식당</a>
                         <a href="#">기타시설</a>
-                        <a href="map.html">주변위치</a>
+                        <a href="../html/map.html">주변위치</a>
                     </div>
                 </li>
                 <li class="dropdown health-tab">
                     <a>맞춤형 정보</a>
                     <div class="dropdown-content health-content">
                         <!-- <a href="HealthCare.html" class="moveable">건강관리</a> -->
-                        <a href="#" class="moveable">질병예측</a>
+                        <a href="../html/DiseasePrediction.html" class="moveable">질병예측</a>
                     </div>
                 </li>
                 <li class="dropdown community-tab">
                     <a>커뮤니티</a>
                     <div class="dropdown-content community-content">
-                        <a href="#">앨범게시판</a>
+                        <a href="../html/album_list.html">앨범게시판</a>
                     </div>
                 </li>
             </ul>
@@ -58,7 +58,7 @@
         <div class="breadcrumb-background"></div> <!-- 사각형 도형을 추가 -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="main.html">홈</a><span>&gt;</span></li>
+                <li class="breadcrumb-item"><a href="../html/main.html">홈</a><span>&gt;</span></li>
                 <!-- <li class="breadcrumb-item"><a href="item_list.html">제품</a><span>&gt;</span></li> -->
                 <li class="breadcrumb-item active" aria-current="page">주변위치</li> 
             </ol>
@@ -94,12 +94,12 @@
                 <span class="footer-lang">🌐 대한민국/한국어 </span>
                 <span class="footer-top"><a href="#" id="back-to-top1"><img src="../img/Base_up01.png" alt="맨 위" srcset=""></a></span>
             </div>
-            <hr> 
+             <hr> 
             <div class="footer-top">
                 <div class="footer-links">
                     <h3>제품</h3>
                     <ul>
-                        <li><a href="item_list.html">사료</a></li>
+                        <li><a href="../html/item_list.html">사료</a></li>
                         <li><a href="#">간식</a></li>
                         <li><a href="#">용품</a></li>
                     </ul>
@@ -109,22 +109,23 @@
                     <ul>
                         <li><a href="#">병원</a></li>
                         <li><a href="#">숙박</a></li>
-                        <li><a href="#">카페</a></li>
-                        <li><a href="map.html">주변위치</a></li>
+                        <li><a href="#">카페/식당</a></li>
+                        <li><a href="#">기타시설</a></li>
+                        <li><a href="../html/map.html">주변위치</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h3>맞춤형 정보</h3>
                     <ul>
                         <!-- <li><a href="HealthCare.html">건강관리</a></li> -->
-                        <li><a href="#">질병예측</a></li>
+                        <li><a href="../html/DiseasePrediction.html">질병예측</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h3>커뮤니티</h3>
                     <ul>
                         <!-- <li><a href="#">자주 묻는 질문</a></li> -->
-                        <li><a href="#">앨범게시판</a></li>
+                        <li><a href="../html/album_list.html">앨범게시판</a></li>
                     </ul>   
                 </div>
             </div>
